2012-06-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix POINTER_SET with surviving result partially in hl. Partial fix for bug #3531660.

2012-06-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_autobaud.c: cosmetics
	* device/lib/printfl.c: fixed bug 3513300

2012-06-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed bug #3531544. Fixed cast from h to hx.

2012-06-05 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/libiberty/makefile.in:
	  excluded pex*.c files from build since pex-unix.c doesn't
	  compile on cygwim mingw and they are not needed by sdbinutils
	* doc/sdccman.lyx: compiler macro definitions not starting with
	  double underscore characters are deprecated if --std-cXX
	  command line option is defined;
	  new compiler macros for processor definition were introduced
	  for pic14 and pic16 targets

2012-06-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Disallow surviving hl in addition with extended stack operands. Partial fix for bug #3531660.

2012-06-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (packForPush),
	* src/ds390/ralloc.c (packForPush),
	* src/hc08/ralloc.c (packForPush),
	* src/pic14/ralloc.c (packForPush),
	* src/pic16/ralloc.c (packForPush): fixed bug #3527285

2012-06-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix corner case in addition with extended stack right operand and low result byte in hl. Partial fix for bug #3531660.

2012-06-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Disallow use of hl over comparison when there is an extended stack operand. Partial fix for bug #3531660.
	* src/z80/gen.c:
	  Save a during GET_VALUE_AT_ADDRESS when storing to extended stack operand. Partial fix for bug #3531660.

2012-06-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
